syntax = "proto3";

package proto;
option go_package = "./proto;proto";


message Empty {}

message IdResp {
  string id = 1;
}

message UserIdReq {
  string id = 1;
}

message IdAndUserIdReq {
  string id = 1;
  string user_id = 2;
}

message UserIdPageReq {
  string user_id = 1;
  int64 page_no = 2;
  int64 page_size = 3;
}

message PageReq {
  int64 page_no = 1;
  int64 page_size = 2;
}

message UserMutualPageReq {
  string id = 1;
  string target_user_id = 2;
  int64 page_no = 3;
  int64 page_size = 4;
}

message ProjIdReq {
  string project_id = 1;
}

message ProjIdPageReq {
  string project_id = 1;
  int64 page_no = 2;
  int64 page_size = 3;
}

message ProjUserIdPageReq {
  string project_id = 1;
  string user_id = 2;
  int64 page_no = 3;
  int64 page_size = 4;
}

message ProjUserIdReq {
  string project_id = 1;
  string user_id = 2;
  bool from_admin = 3;
}

message Ids {
  repeated string ids = 1;
}

message IdList {
  repeated string id = 1;
  string user_id = 2;
}

message BoolResp {
  bool result = 1;
}

message BoolsResp {
  repeated bool result = 1;
}

message MultiPart {
  bytes data = 1;
  string path = 2;
  string url = 3;
}

message Social {
  string twitter = 1;
  string discord = 2;
  string twitter_id = 3;
  string discord_id = 4;
  string father_twitter = 5;
}

message Blockchain {
  uint64 chain_id = 1;
  string name = 2;
  string logo_url = 3;
  string multicall = 4;
}

enum ContractType {
  CtStaking = 0;
}